--- a/shadowsocks/ss/rules/gfwlist.conf
+++ b/shadowsocks/ss/rules/gfwlist.conf
@@ -368,6 +368,16 @@ server=/.flickrhivemind.net/127.0.0.1#7913
 ipset=/.flickrhivemind.net/gfwlist
 server=/.flickriver.com/127.0.0.1#7913
 ipset=/.flickriver.com/gfwlist
+server=/.pixnet.net/127.0.0.1#7913
+ipset=/.pixnet.net/gfwlist
+server=/.pixnet.in/127.0.0.1#7913
+ipset=/.pixnet.in/gfwlist
+server=/.pixnet.cc/127.0.0.1#7913
+ipset=/.pixnet.cc/gfwlist
+server=/.pimg.tw/127.0.0.1#7913
+ipset=/.pimg.tw/gfwlist
+server=/.pixplug.in/127.0.0.1#7913
+ipset=/.pixplug.in/gfwlist
 server=/.facebook.br/127.0.0.1#7913
 ipset=/.facebook.br/gfwlist
 server=/.facebook.com/127.0.0.1#7913
