--- a/shadowsocks/ss/rules/gfwlist.conf
+++ b/shadowsocks/ss/rules/gfwlist.conf
@@ -246,8 +246,6 @@ server=/.googleplus.com/127.0.0.1#7913
 ipset=/.googleplus.com/gfwlist
 server=/.googlesource.com/127.0.0.1#7913
 ipset=/.googlesource.com/gfwlist
-server=/.googlesyndication.com/127.0.0.1#7913
-ipset=/.googlesyndication.com/gfwlist
 server=/.googlevideo.com/127.0.0.1#7913
 ipset=/.googlevideo.com/gfwlist
 server=/.googleweblight.com/127.0.0.1#7913
@@ -350,6 +348,32 @@ server=/.javhub.net/127.0.0.1#7913
 ipset=/.javhub.net/gfwlist
 server=/.91porn.com/127.0.0.1#7913
 ipset=/.91porn.com/gfwlist
+server=/.github.com/127.0.0.1#7913
+ipset=/.github.com/gfwlist
+server=/.github.io/127.0.0.1#7913
+ipset=/.github.io/gfwlist
+server=/.githubusercontent.com/127.0.0.1#7913
+ipset=/.githubusercontent.com/gfwlist
+server=/.githubapp.com/127.0.0.1#7913
+ipset=/.githubapp.com/gfwlist
+server=/.github.global.ssl.fastly.net/127.0.0.1#7913
+ipset=/.github.global.ssl.fastly.net/gfwlist
+server=/.rawgithub.com/127.0.0.1#7913
+ipset=/.rawgithub.com/gfwlist
+server=/.gitbook.com/127.0.0.1#7913
+ipset=/.gitbook.com/gfwlist
+server=/.gitbooks.io/127.0.0.1#7913
+ipset=/.gitbooks.io/gfwlist
+server=/.rawgit.com/127.0.0.1#7913
+ipset=/.rawgit.com/gfwlist
+server=/.git.io/127.0.0.1#7913
+ipset=/.git.io/gfwlist
+server=/.bitbucket.org/127.0.0.1#7913
+ipset=/.bitbucket.org/gfwlist
+server=/.cloudfront.net/127.0.0.1#7913
+ipset=/.cloudfront.net/gfwlist
+server=/.atlassian.com/127.0.0.1#7913
+ipset=/.atlassian.com/gfwlist
 server=/.cdninstagram.com/127.0.0.1#7913
 ipset=/.cdninstagram.com/gfwlist
 server=/.instagram.com/127.0.0.1#7913
@@ -368,6 +392,58 @@ server=/.flickrhivemind.net/127.0.0.1#7913
 ipset=/.flickrhivemind.net/gfwlist
 server=/.flickriver.com/127.0.0.1#7913
 ipset=/.flickriver.com/gfwlist
+server=/.gravatar.com/127.0.0.1#7913
+ipset=/.gravatar.com/gfwlist
+server=/.outlook.com/127.0.0.1#7913
+ipset=/.outlook.com/gfwlist
+server=/.microsoft.com/127.0.0.1#7913
+ipset=/.microsoft.com/gfwlist
+server=/.atom.io/127.0.0.1#7913
+ipset=/.atom.io/gfwlist
+server=/.herokudns.com/127.0.0.1#7913
+ipset=/.herokudns.com/gfwlist
+server=/.fastly.net/127.0.0.1#7913
+ipset=/.fastly.net/gfwlist
+server=/.hockeyapp.net/127.0.0.1#7913
+ipset=/.hockeyapp.net/gfwlist
+server=/.inoreader.com/127.0.0.1#7913
+ipset=/.inoreader.com/gfwlist
+server=/.fabric.io/127.0.0.1#7913
+ipset=/.fabric.io/gfwlist
+server=/.jetbrains.com/127.0.0.1#7913
+ipset=/.jetbrains.com/gfwlist
+server=/.openwrt.org/127.0.0.1#7913
+ipset=/.openwrt.org/gfwlist
+server=/.bintray.com/127.0.0.1#7913
+ipset=/.bintray.com/gfwlist
+server=/.edgekey.net/127.0.0.1#7913
+ipset=/.edgekey.net/gfwlist
+server=/.xmlsoft.org/127.0.0.1#7913
+ipset=/.xmlsoft.org/gfwlist
+server=/.herokuapp.com/127.0.0.1#7913
+ipset=/.herokuapp.com/gfwlist
+server=/.gradle.org/127.0.0.1#7913
+ipset=/.gradle.org/gfwlist
+server=/.realm.io/127.0.0.1#7913
+ipset=/.realm.io/gfwlist
+server=/.vimeo.com/127.0.0.1#7913
+ipset=/.vimeo.com/gfwlist
+server=/.vimeocdn.com/127.0.0.1#7913
+ipset=/.vimeocdn.com/gfwlist
+server=/.visualstudio.com/127.0.0.1#7913
+ipset=/.visualstudio.com/gfwlist
+server=/.vsassets.io/127.0.0.1#7913
+ipset=/.vsassets.io/gfwlist
+server=/.asciiwwdc.com/127.0.0.1#7913
+ipset=/.asciiwwdc.com/gfwlist
+server=/.jenkins.io/127.0.0.1#7913
+ipset=/.jenkins.io/gfwlist
+server=/.jenkins-ci.org/127.0.0.1#7913
+ipset=/.jenkins-ci.org/gfwlist
+server=/.osuosl.org/127.0.0.1#7913
+ipset=/.osuosl.org/gfwlist
+server=/.sourceforge.net/127.0.0.1#7913
+ipset=/.sourceforge.net/gfwlist
 server=/.pixnet.net/127.0.0.1#7913
 ipset=/.pixnet.net/gfwlist
 server=/.pixnet.in/127.0.0.1#7913
@@ -378,6 +454,50 @@ server=/.pimg.tw/127.0.0.1#7913
 ipset=/.pimg.tw/gfwlist
 server=/.pixplug.in/127.0.0.1#7913
 ipset=/.pixplug.in/gfwlist
+server=/.dropboxstatic.com/127.0.0.1#7913
+ipset=/.dropboxstatic.com/gfwlist
+server=/.dropbox.com/127.0.0.1#7913
+ipset=/.dropbox.com/gfwlist
+server=/.newrelic.com/127.0.0.1#7913
+ipset=/.newrelic.com/gfwlist
+server=/.olark.com/127.0.0.1#7913
+ipset=/.olark.com/gfwlist
+server=/.swiftype.com/127.0.0.1#7913
+ipset=/.swiftype.com/gfwlist
+server=/.swiftypecdn.com/127.0.0.1#7913
+ipset=/.swiftypecdn.com/gfwlist
+server=/.segment.com/127.0.0.1#7913
+ipset=/.segment.com/gfwlist
+server=/.segment.io/127.0.0.1#7913
+ipset=/.segment.io/gfwlist
+server=/.intercom.io/127.0.0.1#7913
+ipset=/.intercom.io/gfwlist
+server=/.intercomcdn.com/127.0.0.1#7913
+ipset=/.intercomcdn.com/gfwlist
+server=/.typography.com/127.0.0.1#7913
+ipset=/.typography.com/gfwlist
+server=/.nr-assets.net/127.0.0.1#7913
+ipset=/.nr-assets.net/gfwlist
+server=/.stackoverflow.com/127.0.0.1#7913
+ipset=/.stackoverflow.com/gfwlist
+server=/.sstatic.net/127.0.0.1#7913
+ipset=/.sstatic.net/gfwlist
+server=/.stackexchange.com/127.0.0.1#7913
+ipset=/.stackexchange.com/gfwlist
+server=/.python.org/127.0.0.1#7913
+ipset=/.python.org/gfwlist
+server=/.readthedocs.io/127.0.0.1#7913
+ipset=/.readthedocs.io/gfwlist
+server=/.readthedocs.org/127.0.0.1#7913
+ipset=/.readthedocs.org/gfwlist
+server=/.npmjs.org/127.0.0.1#7913
+ipset=/.npmjs.org/gfwlist
+server=/.nodejs.org/127.0.0.1#7913
+ipset=/.nodejs.org/gfwlist
+server=/.rubygems.org/127.0.0.1#7913
+ipset=/.rubygems.org/gfwlist
+server=/.cocoapods.org/127.0.0.1#7913
+ipset=/.cocoapods.org/gfwlist
 server=/.facebook.br/127.0.0.1#7913
 ipset=/.facebook.br/gfwlist
 server=/.facebook.com/127.0.0.1#7913
@@ -414,26 +534,6 @@ server=/.rocksdb.org/127.0.0.1#7913
 ipset=/.rocksdb.org/gfwlist
 server=/.whatsapp.net/127.0.0.1#7913
 ipset=/.whatsapp.net/gfwlist
-server=/.github.com/127.0.0.1#7913
-ipset=/.github.com/gfwlist
-server=/.github.io/127.0.0.1#7913
-ipset=/.github.io/gfwlist
-server=/.githubusercontent.com/127.0.0.1#7913
-ipset=/.githubusercontent.com/gfwlist
-server=/.gitbook.com/127.0.0.1#7913
-ipset=/.gitbook.com/gfwlist
-server=/.gitbooks.io/127.0.0.1#7913
-ipset=/.gitbooks.io/gfwlist
-server=/.rawgithub.com/127.0.0.1#7913
-ipset=/.rawgithub.com/gfwlist
-server=/.rawgit.com/127.0.0.1#7913
-ipset=/.rawgit.com/gfwlist
-server=/.git.io/127.0.0.1#7913
-ipset=/.git.io/gfwlist
-server=/.githubapp.com/127.0.0.1#7913
-ipset=/.githubapp.com/gfwlist
-server=/.github.global.ssl.fastly.net/127.0.0.1#7913
-ipset=/.github.global.ssl.fastly.net/gfwlist
 server=/.twitter.com/127.0.0.1#7913
 ipset=/.twitter.com/gfwlist
 server=/.twimg.com/127.0.0.1#7913
@@ -442,3 +542,5 @@ server=/.t.co/127.0.0.1#7913
 ipset=/.t.co/gfwlist
 server=/.tapbots.com/127.0.0.1#7913
 ipset=/.tapbots.com/gfwlist
+server=/.tapbots.net/127.0.0.1#7913
+ipset=/.tapbots.net/gfwlist
