--- a/shadowsocks/ss/rules/gfwlist.conf
+++ b/shadowsocks/ss/rules/gfwlist.conf
@@ -444,6 +444,20 @@ server=/.osuosl.org/127.0.0.1#7913
 ipset=/.osuosl.org/gfwlist
 server=/.sourceforge.net/127.0.0.1#7913
 ipset=/.sourceforge.net/gfwlist
+server=/.blogger.com/127.0.0.1#7913
+ipset=/.blogger.com/gfwlist
+server=/.disqus.com/127.0.0.1#7913
+ipset=/.disqus.com/gfwlist
+server=/.dwnews.com/127.0.0.1#7913
+ipset=/.dwnews.com/gfwlist
+server=/.dwnews.net/127.0.0.1#7913
+ipset=/.dwnews.net/gfwlist
+server=/.getpostman.com/127.0.0.1#7913
+ipset=/.getpostman.com/gfwlist
+server=/.marketo.net/127.0.0.1#7913
+ipset=/.marketo.net/gfwlist
+server=/.pstmn.io/127.0.0.1#7913
+ipset=/.pstmn.io/gfwlist
 server=/.pixnet.net/127.0.0.1#7913
 ipset=/.pixnet.net/gfwlist
 server=/.pixnet.in/127.0.0.1#7913
@@ -458,6 +472,10 @@ server=/.dropboxstatic.com/127.0.0.1#7913
 ipset=/.dropboxstatic.com/gfwlist
 server=/.dropbox.com/127.0.0.1#7913
 ipset=/.dropbox.com/gfwlist
+server=/.dropboxapi.com/127.0.0.1#7913
+ipset=/.dropboxapi.com/gfwlist
+server=/.db.tt/127.0.0.1#7913
+ipset=/.db.tt/gfwlist
 server=/.newrelic.com/127.0.0.1#7913
 ipset=/.newrelic.com/gfwlist
 server=/.olark.com/127.0.0.1#7913
@@ -498,6 +516,14 @@ server=/.rubygems.org/127.0.0.1#7913
 ipset=/.rubygems.org/gfwlist
 server=/.cocoapods.org/127.0.0.1#7913
 ipset=/.cocoapods.org/gfwlist
+server=/.thebigboss.org/127.0.0.1#7913
+ipset=/.thebigboss.org/gfwlist
+server=/.saurik.com/127.0.0.1#7913
+ipset=/.saurik.com/gfwlist
+server=/.modmyi.com/127.0.0.1#7913
+ipset=/.modmyi.com/gfwlist
+server=/.zodttd.com/127.0.0.1#7913
+ipset=/.zodttd.com/gfwlist
 server=/.facebook.br/127.0.0.1#7913
 ipset=/.facebook.br/gfwlist
 server=/.facebook.com/127.0.0.1#7913
