--- a/maintain_files/gfwlist.conf
+++ b/maintain_files/gfwlist.conf
@@ -4,6 +4,8 @@ server=/.gstatic.com/127.0.0.1#7913
 ipset=/.gstatic.com/gfwlist
 server=/.googleusercontent.com/127.0.0.1#7913
 ipset=/.googleusercontent.com/gfwlist
+server=/.google-cardboard.com/127.0.0.1#7913
+ipset=/.google-cardboard.com/gfwlist
 server=/.gmail.com/127.0.0.1#7913
 ipset=/.gmail.com/gfwlist
 server=/.youtu.be/127.0.0.1#7913
@@ -348,6 +350,24 @@ server=/.javhub.net/127.0.0.1#7913
 ipset=/.javhub.net/gfwlist
 server=/.91porn.com/127.0.0.1#7913
 ipset=/.91porn.com/gfwlist
+server=/.zeplin.io/127.0.0.1#7913
+ipset=/.zeplin.io/gfwlist
+server=/.mixpanel.com/127.0.0.1#7913
+ipset=/.mixpanel.com/gfwlist
+server=/.moviejie.net/127.0.0.1#7913
+ipset=/.moviejie.net/gfwlist
+server=/.moviejie.com/127.0.0.1#7913
+ipset=/.moviejie.com/gfwlist
+server=/.fitbit.com/127.0.0.1#7913
+ipset=/.fitbit.com/gfwlist
+server=/.fitstar.com/127.0.0.1#7913
+ipset=/.fitstar.com/gfwlist
+server=/.withings.net/127.0.0.1#7913
+ipset=/.withings.net/gfwlist
+server=/.withings.com/127.0.0.1#7913
+ipset=/.withings.com/gfwlist
+server=/.health.nokia.com/127.0.0.1#7913
+ipset=/.health.nokia.com/gfwlist
 server=/.github.com/127.0.0.1#7913
 ipset=/.github.com/gfwlist
 server=/.github.io/127.0.0.1#7913
@@ -380,6 +400,14 @@ server=/.instagram.com/127.0.0.1#7913
 ipset=/.instagram.com/gfwlist
 server=/.tumblr.com/127.0.0.1#7913
 ipset=/.tumblr.com/gfwlist
+server=/.umblr.com/127.0.0.1#7913
+ipset=/.umblr.com/gfwlist
+server=/.txmblr.com/127.0.0.1#7913
+ipset=/.txmblr.com/gfwlist
+server=/.spotify.com/127.0.0.1#7913
+ipset=/.spotify.com/gfwlist
+server=/.soundcloud.com/127.0.0.1#7913
+ipset=/.soundcloud.com/gfwlist
 server=/.imgur.com/127.0.0.1#7913
 ipset=/.imgur.com/gfwlist
 server=/.amazonaws.com/127.0.0.1#7913
@@ -458,6 +486,10 @@ server=/.marketo.net/127.0.0.1#7913
 ipset=/.marketo.net/gfwlist
 server=/.pstmn.io/127.0.0.1#7913
 ipset=/.pstmn.io/gfwlist
+server=/.ift.tt/127.0.0.1#7913
+ipset=/.ift.tt/gfwlist
+server=/.4shared.com/127.0.0.1#7913
+ipset=/.4shared.com/gfwlist
 server=/.pixnet.net/127.0.0.1#7913
 ipset=/.pixnet.net/gfwlist
 server=/.pixnet.in/127.0.0.1#7913
@@ -468,6 +500,8 @@ server=/.pimg.tw/127.0.0.1#7913
 ipset=/.pimg.tw/gfwlist
 server=/.pixplug.in/127.0.0.1#7913
 ipset=/.pixplug.in/gfwlist
+server=/.dropboxusercontent.com/127.0.0.1#7913
+ipset=/.dropboxusercontent.com/gfwlist
 server=/.dropboxstatic.com/127.0.0.1#7913
 ipset=/.dropboxstatic.com/gfwlist
 server=/.dropbox.com/127.0.0.1#7913
@@ -476,6 +510,16 @@ server=/.dropboxapi.com/127.0.0.1#7913
 ipset=/.dropboxapi.com/gfwlist
 server=/.db.tt/127.0.0.1#7913
 ipset=/.db.tt/gfwlist
+server=/.onedrive.live.com/127.0.0.1#7913
+ipset=/.onedrive.live.com/gfwlist
+server=/.wordpress.com/127.0.0.1#7913
+ipset=/.wordpress.com/gfwlist
+server=/.wp.com/127.0.0.1#7913
+ipset=/.wp.com/gfwlist
+server=/.wordpress.org/127.0.0.1#7913
+ipset=/.wordpress.org/gfwlist
+server=/.w.org/127.0.0.1#7913
+ipset=/.w.org/gfwlist
 server=/.newrelic.com/127.0.0.1#7913
 ipset=/.newrelic.com/gfwlist
 server=/.olark.com/127.0.0.1#7913
@@ -524,14 +568,52 @@ server=/.modmyi.com/127.0.0.1#7913
 ipset=/.modmyi.com/gfwlist
 server=/.zodttd.com/127.0.0.1#7913
 ipset=/.zodttd.com/gfwlist
+server=/.steampowered.com/127.0.0.1#7913
+ipset=/.steampowered.com/gfwlist
+server=/.steamstatic.com/127.0.0.1#7913
+ipset=/.steamstatic.com/gfwlist
+server=/.steamcontent.com/127.0.0.1#7913
+ipset=/.steamcontent.com/gfwlist
+server=/.steamcommunity.com/127.0.0.1#7913
+ipset=/.steamcommunity.com/gfwlist
+server=/.akamaihd.net/127.0.0.1#7913
+ipset=/.akamaihd.net/gfwlist
+server=/.feedly.com/127.0.0.1#7913
+ipset=/.feedly.com/gfwlist
+server=/.feedburner.com/127.0.0.1#7913
+ipset=/.feedburner.com/gfwlist
+server=/.wikimedia.org/127.0.0.1#7913
+ipset=/.wikimedia.org/gfwlist
+server=/.wikipedia.org/127.0.0.1#7913
+ipset=/.wikipedia.org/gfwlist
+server=/.wikipedia.com/127.0.0.1#7913
+ipset=/.wikipedia.com/gfwlist
+server=/.openvpn.net/127.0.0.1#7913
+ipset=/.openvpn.net/gfwlist
+server=/.bit.ly/127.0.0.1#7913
+ipset=/.bit.ly/gfwlist
+server=/.bitly.com/127.0.0.1#7913
+ipset=/.bitly.com/gfwlist
+server=/.ow.ly/127.0.0.1#7913
+ipset=/.ow.ly/gfwlist
+server=/.500px.com/127.0.0.1#7913
+ipset=/.500px.com/gfwlist
+server=/.500px.org/127.0.0.1#7913
+ipset=/.500px.org/gfwlist
+server=/.typekit.net/127.0.0.1#7913
+ipset=/.typekit.net/gfwlist
+server=/.getsitecontrol.com/127.0.0.1#7913
+ipset=/.getsitecontrol.com/gfwlist
+server=/.filepicker.io/127.0.0.1#7913
+ipset=/.filepicker.io/gfwlist
 server=/.facebook.br/127.0.0.1#7913
 ipset=/.facebook.br/gfwlist
 server=/.facebook.com/127.0.0.1#7913
 ipset=/.facebook.com/gfwlist
 server=/.facebook.design/127.0.0.1#7913
 ipset=/.facebook.design/gfwlist
-server=/.connect.facebook.net/127.0.0.1#7913
-ipset=/.connect.facebook.net/gfwlist
+server=/.facebook.net/127.0.0.1#7913
+ipset=/.facebook.net/gfwlist
 server=/.facebook.hu/127.0.0.1#7913
 ipset=/.facebook.hu/gfwlist
 server=/.facebook.in/127.0.0.1#7913
@@ -564,6 +646,10 @@ server=/.twitter.com/127.0.0.1#7913
 ipset=/.twitter.com/gfwlist
 server=/.twimg.com/127.0.0.1#7913
 ipset=/.twimg.com/gfwlist
+server=/.twitpic.com/127.0.0.1#7913
+ipset=/.twitpic.com/gfwlist
+server=/.twtlr.com/127.0.0.1#7913
+ipset=/.twtlr.com/gfwlist
 server=/.t.co/127.0.0.1#7913
 ipset=/.t.co/gfwlist
 server=/.tapbots.com/127.0.0.1#7913
