更新配置文件

--- a/maintain_files/gfwlist.conf
+++ b/maintain_files/gfwlist.conf
@@ -368,6 +368,12 @@ server=/.withings.com/127.0.0.1#7913
 ipset=/.withings.com/gfwlist
 server=/.health.nokia.com/127.0.0.1#7913
 ipset=/.health.nokia.com/gfwlist
+server=/.pokemon.com/127.0.0.1#7913
+ipset=/.pokemon.com/gfwlist
+server=/.nianticlabs.com/127.0.0.1#7913
+ipset=/.nianticlabs.com/gfwlist
+server=/.upsight-api.com/127.0.0.1#7913
+ipset=/.upsight-api.com/gfwlist
 server=/.github.com/127.0.0.1#7913
 ipset=/.github.com/gfwlist
 server=/.github.io/127.0.0.1#7913
