--- a/shadowsocks/ss/rules/gfwlist.conf
+++ b/shadowsocks/ss/rules/gfwlist.conf
@@ -414,6 +414,10 @@ server=/.spotify.com/127.0.0.1#7913
 ipset=/.spotify.com/gfwlist
 server=/.soundcloud.com/127.0.0.1#7913
 ipset=/.soundcloud.com/gfwlist
+server=/.firefox.com/127.0.0.1#7913
+ipset=/.firefox.com/gfwlist
+server=/.mozilla.org/127.0.0.1#7913
+ipset=/.mozilla.org/gfwlist
 server=/.imgur.com/127.0.0.1#7913
 ipset=/.imgur.com/gfwlist
 server=/.amazonaws.com/127.0.0.1#7913
