--- a/shadowsocks/ss/rules/gfwlist.conf
+++ b/shadowsocks/ss/rules/gfwlist.conf
@@ -424,6 +424,8 @@ server=/.marketo.net/127.0.0.1#7913
 ipset=/.marketo.net/gfwlist
 server=/.material.io/127.0.0.1#7913
 ipset=/.material.io/gfwlist
+server=/.medium.com/127.0.0.1#7913
+ipset=/.medium.com/gfwlist
 server=/.messenger.com/127.0.0.1#7913
 ipset=/.messenger.com/gfwlist
 server=/.microsoft.com/127.0.0.1#7913
@@ -440,6 +442,8 @@ server=/.mozilla.org/127.0.0.1#7913
 ipset=/.mozilla.org/gfwlist
 server=/.newrelic.com/127.0.0.1#7913
 ipset=/.newrelic.com/gfwlist
+server=/.nextcloud.com/127.0.0.1#7913
+ipset=/.nextcloud.com/gfwlist
 server=/.nianticlabs.com/127.0.0.1#7913
 ipset=/.nianticlabs.com/gfwlist
 server=/.nic.google/127.0.0.1#7913
