--- a/maintain_files/gfwlist.conf
+++ b/maintain_files/gfwlist.conf
@@ -508,6 +508,12 @@ server=/.readthedocs.org/127.0.0.1#7913
 ipset=/.readthedocs.org/gfwlist
 server=/.realm.io/127.0.0.1#7913
 ipset=/.realm.io/gfwlist
+server=/.reddit.com/127.0.0.1#7913
+ipset=/.reddit.com/gfwlist
+server=/.redditmedia.com/127.0.0.1#7913
+ipset=/.redditmedia.com/gfwlist
+server=/.redditstatic.com/127.0.0.1#7913
+ipset=/.redditstatic.com/gfwlist
 server=/.redhotlabs.com/127.0.0.1#7913
 ipset=/.redhotlabs.com/gfwlist
 server=/.registry.google/127.0.0.1#7913
