--- a/maintain_files/adblock.conf
+++ b/maintain_files/adblock.conf
@@ -22952,3 +22952,4 @@ address=/zzmyw.com/127.0.0.1
 address=/zzpxw.cn/127.0.0.1
 address=/zzshw.net/127.0.0.1
 address=/zztxdown.com/127.0.0.1
+address=/мой-метод.рф/127.0.0.1
