--- a/shadowsocks/ss/rules/gfwlist.conf
+++ b/shadowsocks/ss/rules/gfwlist.conf
@@ -140,6 +140,8 @@ server=/.facebook.se/127.0.0.1#7913
 ipset=/.facebook.se/gfwlist
 server=/.facebookquotes4u.com/127.0.0.1#7913
 ipset=/.facebookquotes4u.com/gfwlist
+server=/.fanatical.com/127.0.0.1#7913
+ipset=/.fanatical.com/gfwlist
 server=/.fastly.net/127.0.0.1#7913
 ipset=/.fastly.net/gfwlist
 server=/.fb.com/127.0.0.1#7913
@@ -440,10 +442,22 @@ server=/.moviejie.net/127.0.0.1#7913
 ipset=/.moviejie.net/gfwlist
 server=/.mozilla.org/127.0.0.1#7913
 ipset=/.mozilla.org/gfwlist
+server=/.netflix.com/127.0.0.1#7913
+ipset=/.netflix.com/gfwlist
+server=/.netflix.net/127.0.0.1#7913
+ipset=/.netflix.net/gfwlist
 server=/.newrelic.com/127.0.0.1#7913
 ipset=/.newrelic.com/gfwlist
 server=/.nextcloud.com/127.0.0.1#7913
 ipset=/.nextcloud.com/gfwlist
+server=/.nflxext.com/127.0.0.1#7913
+ipset=/.nflxext.com/gfwlist
+server=/.nflximg.com/127.0.0.1#7913
+ipset=/.nflximg.com/gfwlist
+server=/.nflximg.net/127.0.0.1#7913
+ipset=/.nflximg.net/gfwlist
+server=/.nflxvideo.net/127.0.0.1#7913
+ipset=/.nflxvideo.net/gfwlist
 server=/.nianticlabs.com/127.0.0.1#7913
 ipset=/.nianticlabs.com/gfwlist
 server=/.nic.google/127.0.0.1#7913
@@ -590,6 +604,8 @@ server=/.thinkwithgoogle.com/127.0.0.1#7913
 ipset=/.thinkwithgoogle.com/gfwlist
 server=/.tiltbrush.com/127.0.0.1#7913
 ipset=/.tiltbrush.com/gfwlist
+server=/.tumblr.co/127.0.0.1#7913
+ipset=/.tumblr.co/gfwlist
 server=/.tumblr.com/127.0.0.1#7913
 ipset=/.tumblr.com/gfwlist
 server=/.twimg.com/127.0.0.1#7913
