--- a/maintain_files/gfwlist.conf
+++ b/maintain_files/gfwlist.conf
@@ -490,6 +490,8 @@ server=/.ow.ly/127.0.0.1#7913
 ipset=/.ow.ly/gfwlist
 server=/.panoramio.com/127.0.0.1#7913
 ipset=/.panoramio.com/gfwlist
+server=/.phncdn.com/127.0.0.1#7913
+ipset=/.phncdn.com/gfwlist
 server=/.picasaweb.com/127.0.0.1#7913
 ipset=/.picasaweb.com/gfwlist
 server=/.pimg.tw/127.0.0.1#7913
@@ -506,6 +508,8 @@ server=/.pokemon.com/127.0.0.1#7913
 ipset=/.pokemon.com/gfwlist
 server=/.polymer-project.org/127.0.0.1#7913
 ipset=/.polymer-project.org/gfwlist
+server=/.pornhub.com/127.0.0.1#7913
+ipset=/.pornhub.com/gfwlist
 server=/.pstmn.io/127.0.0.1#7913
 ipset=/.pstmn.io/gfwlist
 server=/.python.org/127.0.0.1#7913
