--- a/arm384/shadowsocks/ss/rules/gfwlist.conf
+++ b/arm384/shadowsocks/ss/rules/gfwlist.conf
@@ -968,6 +968,8 @@ server=/.cse.google.com/127.0.0.1#7913
 ipset=/.cse.google.com/gfwlist
 server=/.ct.googleapis.com/127.0.0.1#7913
 ipset=/.ct.googleapis.com/gfwlist
+server=/.ctfassets.net/127.0.0.1#7913
+ipset=/.ctfassets.net/gfwlist
 server=/.cvp.twitch.tv/127.0.0.1#7913
 ipset=/.cvp.twitch.tv/gfwlist
 server=/.cynicallys.tumblr.com/127.0.0.1#7913
@@ -1242,6 +1244,8 @@ server=/.entry-at.line.me/127.0.0.1#7913
 ipset=/.entry-at.line.me/gfwlist
 server=/.environment.google/127.0.0.1#7913
 ipset=/.environment.google/gfwlist
+server=/.errors.figma.com/127.0.0.1#7913
+ipset=/.errors.figma.com/gfwlist
 server=/.event-web.line.me/127.0.0.1#7913
 ipset=/.event-web.line.me/gfwlist
 server=/.events.google.com/127.0.0.1#7913
@@ -1308,6 +1312,8 @@ server=/.fi.google.com/127.0.0.1#7913
 ipset=/.fi.google.com/gfwlist
 server=/.fiber.google.com/127.0.0.1#7913
 ipset=/.fiber.google.com/gfwlist
+server=/.figma.com/127.0.0.1#7913
+ipset=/.figma.com/gfwlist
 server=/.file.wikileaks.org/127.0.0.1#7913
 ipset=/.file.wikileaks.org/gfwlist
 server=/.filepicker.io/127.0.0.1#7913
@@ -1832,6 +1838,8 @@ server=/.images-pos-opensocial.googleusercontent.com/127.0.0.1#7913
 ipset=/.images-pos-opensocial.googleusercontent.com/gfwlist
 server=/.images.ak.instagram.com/127.0.0.1#7913
 ipset=/.images.ak.instagram.com/gfwlist
+server=/.images.ctfassets.net/127.0.0.1#7913
+ipset=/.images.ctfassets.net/gfwlist
 server=/.images.google.com/127.0.0.1#7913
 ipset=/.images.google.com/gfwlist
 server=/.images0-focus-opensocial.googleusercontent.com/127.0.0.1#7913
@@ -2604,6 +2612,10 @@ server=/.s1.googleusercontent.com/127.0.0.1#7913
 ipset=/.s1.googleusercontent.com/gfwlist
 server=/.s2.googleusercontent.com/127.0.0.1#7913
 ipset=/.s2.googleusercontent.com/gfwlist
+server=/.s3-alpha-sig.figma.com/127.0.0.1#7913
+ipset=/.s3-alpha-sig.figma.com/gfwlist
+server=/.s3-downtime.figma.com/127.0.0.1#7913
+ipset=/.s3-downtime.figma.com/gfwlist
 server=/.s3.googleusercontent.com/127.0.0.1#7913
 ipset=/.s3.googleusercontent.com/gfwlist
 server=/.s4.googleusercontent.com/127.0.0.1#7913
@@ -3068,6 +3080,8 @@ server=/.startpage.freebrowser.org/127.0.0.1#7913
 ipset=/.startpage.freebrowser.org/gfwlist
 server=/.static.ak.instagram.com/127.0.0.1#7913
 ipset=/.static.ak.instagram.com/gfwlist
+server=/.static.figma.com/127.0.0.1#7913
+ipset=/.static.figma.com/gfwlist
 server=/.static.googleusercontent.com/127.0.0.1#7913
 ipset=/.static.googleusercontent.com/gfwlist
 server=/.static.line.naver.jp/127.0.0.1#7913
@@ -3390,6 +3404,8 @@ server=/.video.googleusercontent.com/127.0.0.1#7913
 ipset=/.video.googleusercontent.com/gfwlist
 server=/.video.xx.fbcdn.net/127.0.0.1#7913
 ipset=/.video.xx.fbcdn.net/gfwlist
+server=/.videos.ctfassets.net/127.0.0.1#7913
+ipset=/.videos.ctfassets.net/gfwlist
 server=/.vimeo-hp-videos.global.ssl.fastly.net/127.0.0.1#7913
 ipset=/.vimeo-hp-videos.global.ssl.fastly.net/gfwlist
 server=/.vimeo.com/127.0.0.1#7913
@@ -3570,6 +3586,8 @@ server=/.www.dualstack.dropbox-dns.com/127.0.0.1#7913
 ipset=/.www.dualstack.dropbox-dns.com/gfwlist
 server=/.www.facebook.com/127.0.0.1#7913
 ipset=/.www.facebook.com/gfwlist
+server=/.www.figma.com/127.0.0.1#7913
+ipset=/.www.figma.com/gfwlist
 server=/.www.gcr.io/127.0.0.1#7913
 ipset=/.www.gcr.io/gfwlist
 server=/.www.getsync.com/127.0.0.1#7913
